# pipeline

./: .gitignore  Dockerfile  README.md  aggregates.md  ch_writer.py  docker-compose.yml  env.example  pyproject.toml  redis-cluster.sh  requirements.txt
.github/workflows/: publish_docker.yml
conf/: meta_as.yml  meta_circuit.yml  meta_device.yml  meta_interface.yml  meta_organization.yml  telegraf_mappings.yml
conf.example/: meta_ip.yml  meta_organization.yml  telegraf_mappings.yml
conf.example/envs/: base.env  cache_ip_trie.env  cache_redis.env  cric_ip_metadata.env  data_flow.env  data_kafka_message.env  metadata_alcf.env  metadata_caida_org_as.env  metadata_cric.env  metadata_esdb_device.env  metadata_esdb_ipservice.env  metadata_esdb_service_edge.env  metadata_file_export.env  metadata_ip_geo.env  metadata_ipservice.env  metadata_iri.env  (+5 more)
docs/: clickhouse_dicts_mv.md  env_vars.md  redis-cluster-setup.md
metranova/: __init__.py  ch_writer.py  consumers.py  flow_edge_output.py  meta_loader.py  pipelines.py  raw_msg_output.py
pipelines/: cache_ip_trie.yml  cache_redis.yml  cric_ip_metadata.yml  data_dynamic.yml  data_flow.yml  data_kafka_message.yml  data_snmp.yml  metadata_alcf.yml  metadata_caida_org_as.yml  metadata_cric.yml  metadata_esdb_device.yml  metadata_esdb_ipservice.yml  metadata_esdb_service_edge.yml  metadata_file_export.yml  metadata_ip_geo.yml  metadata_ipservice.yml  metadata_iri.yml  metadata_iri_resource.yml  metadata_redis_export.yml  metadata_scinet.yml  metadata_scireg.yml  metadata_service_edge.yml
scripts/: redis-cluster-setup.sh
(+137 files in other folders)
