[project]
name = "pipeline"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools==6.2.1",
    "clickhouse-connect==0.15.0",
    "confluent-kafka==2.14.0",
    "metranova-core",
    "orjson==3.11.3",
    "pycountry==24.6.1",
    "pycountry-convert==0.7.2",
    "pytricia==1.3.0",
    "pyyaml==6.0.3",
    "redis[hiredis]==6.4.0",
    "requests==2.32.5",
]

[tool.uv.sources]
metranova = { workspace = true }
metranova-core = { git = "https://github.com/MetrANOVA/api.git", subdirectory = "packages/metranova", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["metranova"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
